--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,4 +12,5 @@ jobs:
         with: {go-version: "1.22"}
       - uses: goreleaser/goreleaser-action@v5
         with: {args: release --clean}
-        env: {GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}} 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
