--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-go@v5
         with: {go-version: "1.22"}
       - uses: goreleaser/goreleaser-action@v5
-        with: {args: release --clean}
+        with: 
+          version: latest
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
