--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
         with: {go-version: "1.22"}
       - uses: goreleaser/goreleaser-action@v5
         with: 
-          version: latest
+          version: v1.28.1
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
