fix(ci): update syntax for goreleaser v2

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,6 +6,8 @@
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
 
+version: 2
+
 project_name: hello
 
 builds:
@@ -18,15 +20,17 @@ builds:
     ldflags: ["-s -w"]
 
 archives:
+  # 1. Clean Zip
   - id: windows-zip
-    builds: [win]
-    format: zip
+    ids: [win]
+    formats: zip
     wrap_in_directory: false
-    files: [none]
+    files: none
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 
+  # 2. Exe only
   - id: windows-exe
-    builds: [win]
+    ids: [win]
     format: binary
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 
